--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
+@use '~@angular/material' as mat;
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '~@angular/material/_theming' as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -38,19 +38,19 @@ $owl-palette: (
  )
 );
 // #ca5e5c
-$pf2-initiative-primary: mat-palette($owl-palette);
-$pf2-initiative-accent: mat-palette($owl-palette, A200, A100, A400);
+$pf2-initiative-primary: mat.define-palette($owl-palette);
+$pf2-initiative-accent: mat.define-palette($owl-palette, A200, A100, A400);
 
 
 
 // The warn palette is optional (defaults to red).
-$pf2-initiative-warn: mat-palette($mat-red);
+$pf2-initiative-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$primary: mat-palette($mat-indigo);
-$accent:  mat-palette($mat-pink, A200, A100, A400);
-$theme: mat-dark-theme((
+$primary: mat.define-palette(mat.$indigo-palette);
+$accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$theme: mat.define-dark-theme((
   color: (
     primary: $pf2-initiative-primary,
     accent: $pf2-initiative-accent,
