--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,24 @@
-<div class="content" role="main">
-  <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
-  <mat-card>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      <div mat-card-avatar></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <div mat-card-image></div>
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-        Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu
-        was originally bred for hunting.
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
+<div class="wrapper">
+  <div class="main-panel">
+
+    <div class="content">
+      <div class="container-fluid">
+        <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+  
+          <div class="example-box" *ngFor="let movie of movies" cdkDrag>
+            <div class="example-handle" cdkDragHandle>
+              <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+                <path d="M0 0h24v24H0z" fill="none"></path>
+              </svg>
+            </div>{{movie}}
+            <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+            
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
 </div>
-
-
-<router-outlet></router-outlet>
