--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,32 +38,29 @@ $owl-palette: (
  )
 );
 // #ca5e5c
-$pf2-initiative-primary: mat.define-palette($owl-palette);
-$pf2-initiative-accent: mat.define-palette($owl-palette, A200, A100, A400);
-
-
-
-// The warn palette is optional (defaults to red).
-$pf2-initiative-warn: mat.define-palette(mat.$red-palette);
+$my-primary: mat.define-palette($owl-palette, 600);
+$my-accent: mat.define-palette($owl-palette, A200, A100, A400);
+$my-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$primary: mat.define-palette(mat.$indigo-palette);
-$accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$theme: mat.define-dark-theme((
-  color: (
-    primary: $pf2-initiative-primary,
-    accent: $pf2-initiative-accent,
-    warn: $pf2-initiative-warn,
-  )
+$my-theme: mat.define-dark-theme((
+ color: (
+   primary: $my-primary,
+   accent: $my-accent,
+   warn: $my-warn,
+ )
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes(theme);
+// @include mat.core-theme($my-theme);
+@include mat.all-component-themes($my-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import "./assets/styles.1.0.2.ef0599e0b4ae2fdc662b.css";
