--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,6 @@ $my-theme: mat.define-dark-theme((
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #463e43}
 
 @import "./assets/styles.1.0.2.ef0599e0b4ae2fdc662b.css";
