--- a/src/app/components/add-from/add-from.component.html
+++ b/src/app/components/add-from/add-from.component.html
@@ -6,6 +6,9 @@
     <div class="form-group col-md-2">
       <input type="number" id="pcHp" class="form-control" formControlName="hp" placeholder="HP">
     </div>
+    <div class="form-group col-md-2">
+      <input type="number" id="pcHp" class="form-control" formControlName="initiative" placeholder="Initiative">
+    </div>
   </div>
   <div class="form-group">
     <button type="submit" class="btn btn-primary" [disabled]="addPcForm.invalid">Add</button>
