--- a/src/app/components/pc/pc.component.css
+++ b/src/app/components/pc/pc.component.css
@@ -17,6 +17,11 @@
     background-color: #ca945c;
   }
 
+  .border-primary {
+    box-shadow: 0 14px 26px -12px hsl(0deg 0% 60% / 42%), 0 4px 23px 0 rgb(0 0 0 / 24%), 0 8px 10px -5px hsl(0deg 0% 60% / 20%);
+
+  }
+
   .btn.btn-outline-primary.active:hover {
     box-shadow: 0 14px 26px -12px hsl(0deg 0% 60% / 42%), 0 4px 23px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px hsl(0deg 0% 60% / 20%);
 }
