--- a/src/app/components/pc/pc.component.html
+++ b/src/app/components/pc/pc.component.html
@@ -43,7 +43,7 @@
   <div class="col-auto">
     <div class="row">
       <div class="form-group" style="width: 80px;">
-        <input type="number" class="form-control text-center" placeholder="INITIATIVE"[(ngModel)]="pc.initiative">
+        <input type="number" class="form-control text-center" placeholder="INITIATIVE" [(ngModel)]="pc.initiative">
       </div>
     </div>
   </div>
@@ -58,23 +58,23 @@
     </div>
   </div>
   <div class="col">
-    <!-- <condition ng-repeat="condition in pc.conditions track by $index" delete="deleteCondition($index)" condition="condition"></condition> -->
-    <form name="addCondition" ng-submit="addCondition()" *ngIf="false" class="mt-1">
+    <condition *ngFor="let condition of pc.conditions; let i = index" (onDelete)="pc.conditions.splice(i, 1)" [condition]="condition"></condition>
+    <form [formGroup]="conditionForm" (ngSubmit)="addCondition(conditionForm.value)" *ngIf="editCondition" class="mt-1">
       <div class="form-row align-items-center">
         <div class="col">
-          <input id="addConditionName" type="text" class="form-control form-control-sm mb-2" ng-model="condition.name"
+          <input #addConditionName type="text" class="form-control form-control-sm mb-2" formControlName="name"
             placeholder="name">
         </div>
       </div>
       <div class="form-row align-items-center">
         <div class="col-auto">
-          <input id="addConditionCount" type="number" class="form-control form-control-sm" ng-model="condition.count"
+          <input id="addConditionCount" type="number" class="form-control form-control-sm" formControlName="count"
             placeholder="count">
         </div>
         <div class="col-auto">
           <div class="form-check">
             <label class="form-check-label">
-              <input class="form-check-input" type="checkbox" ng-model="condition.descending">
+              <input class="form-check-input" type="checkbox" formControlName="descending">
               <span class="form-check-sign">
                 <span class="check"></span>
               </span>
@@ -86,19 +86,19 @@
           <div class="btn-group float-right" role="group">
             <button type="submit" class="btn btn-outline-success btn-sm">Add</button>
             <button type="button" class="btn btn-outline-danger btn-sm"
-              ng-click="changeAddConditionMode()">Cancel</button>
+              (click)="editCondition = false">Cancel</button>
           </div>
         </div>
       </div>
     </form>
     <div class="btn-group ">
-      <button ng-click="changeAddConditionMode()" class="btn btn-outline-primary btn-sm btn-round ml-auto"
-        title="Add condition" *ngIf="true"><span class="fas fa-plus"></span></button>
+      <button (click)="setEditCondition()" class="btn btn-outline-primary btn-sm btn-round ml-auto"
+        title="Add condition" *ngIf="!editCondition"><span class="fas fa-plus"></span></button>
     </div>
   </div>
   <div class="col-auto">
     <div class="row">
-      <button ng-click="deleteThis()" class="btn btn-outline-danger btn-sm float-right" title="Delete"><span
+      <button (click)="onDelete.emit()" class="btn btn-outline-danger btn-sm float-right" title="Delete"><span
           class="fas fa-times"></span></button>
     </div>
   </div>
