--- a/src/app/components/condition/condition.component.html
+++ b/src/app/components/condition/condition.component.html
@@ -2,7 +2,7 @@
   {{condition.name}}
   <span class="badge badge-light" *ngIf="condition.count != undefined">{{condition.count}}
     <span class="fas fa-caret-down" *ngIf="condition.descending"></span>
-    <span class="fas fa-caret-up" *ngIf="!condition.descending"></span>
+    <span class="fas fa-caret-up" *ngIf="condition.descending == false"></span>
   </span>
   <span class="badge badge-pill badge-light" (click)="changeCount(1)" *ngIf="showControls">
     <span class="fas fa-plus"></span>
